# MQBoost

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  run.py  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  assign_option.yml  pypi_release.yaml
.github/workflows/: auto_assign.yml  create_release.yml  lint.yaml  pypi_release.yaml  test.yaml
examples/: README.md  example.py  mqoptimizer.py  mqregressor.py  simple_example.py
module/: abstract.py  model.py  objective.py  utils.py
mqboost/: __init__.py  base.py  constraints.py  dataset.py  encoder.py  engine.py  hpo.py  objective.py  optimize.py  regressor.py  utils.py
quantile_tree/: __init__.py  abstract.py  base.py  engine.py  model.py  objective.py  utils.py
quantile_tree.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_base.py  test_constraints.py  test_dataset.py  test_encoder.py  test_objective.py  test_optimize.py  test_regressor.py  test_utils.py
