[tool.poetry]
name = "mqboost"
version = "0.2.3"
description = "Monotonic composite quantile gradient boost regressor"
authors = ["RektPunk <rektpunk@gmail.com>"]
readme = "README.md"
repository = "https://github.com/RektPunk/MQBoost"


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.0"
pandas = "^2.2.2"
lightgbm = "^4.3.0"
xgboost = "^2.1.0"
optuna = "^3.6.1"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
plotly = "^5.22.0"
pre-commit = "^3.7.1"
isort = "^5.13.2"
black = "^24.4.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
