[tool.poetry]
name = "mqboost"
version = "0.2.9"
description = "Monotonic composite quantile gradient boost regressor"
authors = ["RektPunk <rektpunk@gmail.com>"]
readme = "README.md"
repository = "https://github.com/RektPunk/MQBoost"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.0"
pandas = "^2.2.2"
lightgbm = "^4.3.0"
xgboost = "^2.1.0"
optuna = "^3.6.1"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
